<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisActivity">

    <TextView
        android:id="@+id/tvRegTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edRegMail"
        android:layout_width="353dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegMail"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvRegMail"
        android:layout_width="61dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/mail"
        app:layout_constraintStart_toStartOf="@+id/edRegMail"
        app:layout_constraintTop_toBottomOf="@+id/tvRegTitel"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/rvRegPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:text="@string/passwort"
        app:layout_constraintStart_toStartOf="@+id/edRegPW"
        app:layout_constraintTop_toBottomOf="@+id/edRegMail" />

    <EditText
        android:id="@+id/edRegPW"
        android:layout_width="353dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvRegPW"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvRegPWSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pwsec"
        app:layout_constraintStart_toStartOf="@+id/edRegPWSec"
        app:layout_constraintTop_toBottomOf="@+id/edRegPW" />

    <EditText
        android:id="@+id/edRegPWSec"
        android:layout_width="353dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegPWSec"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvRegMinZeichen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/min"
        app:layout_constraintStart_toStartOf="@+id/edRegPWSec"
        app:layout_constraintTop_toBottomOf="@+id/edRegPWSec" />

    <TextView
        android:id="@+id/tvRegCaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caps"
        app:layout_constraintStart_toStartOf="@+id/tvRegMinZeichen"
        app:layout_constraintTop_toBottomOf="@+id/tvRegMinZeichen" />

    <TextView
        android:id="@+id/tvRegSonder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sonder"
        app:layout_constraintStart_toStartOf="@+id/tvRegCaps"
        app:layout_constraintTop_toBottomOf="@+id/tvRegCaps" />

    <Button
        android:id="@+id/btnRegOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="@+id/edRegPWSec"
        app:layout_constraintTop_toBottomOf="@+id/tvRegNum" />

    <Button
        android:id="@+id/btnRegNok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nok"
        app:layout_constraintEnd_toEndOf="@+id/edRegPWSec"
        app:layout_constraintTop_toBottomOf="@+id/tvRegNum" />

    <TextView
        android:id="@+id/tvRegNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num"
        app:layout_constraintStart_toStartOf="@+id/tvRegSonder"
        app:layout_constraintTop_toBottomOf="@+id/tvRegSonder" />

</androidx.constraintlayout.widget.ConstraintLayout>